# graphMER

./: .gitignore  85M_BASELINE_500_STEPS.md  ACHIEVEMENT_SUMMARY.md  AGENTS.md  AMAZON_Q_CHECKPOINT_VALIDATION.md  AMAZON_Q_FIXES_SUMMARY.md  AMAZON_Q_REVIEW_RESPONSE.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARK_RESULTS.md  BPE_TOKENIZER_IMPLEMENTATION.md  CHECKPOINTS.md  CLI_AUTOMATION_GUIDE.md  COLAB_TPU_SETUP.md  COLAB_VALIDATION_SUMMARY.md  COMPREHENSIVE_EVALUATION_REPORT.md  CONTRIBUTING.md  CPU_TRAINING_PROFILE.md  CURRENT_STATUS.md  Dockerfile  FIXES_IMPLEMENTED.md  GPU_TRAINING_ANALYSIS.md  GraphMER_Kaggle_Training.ipynb  GraphMER_TPU_Training.ipynb  HANDOVER_CRITICAL_FIXES.md  HIGH_PRIORITY_COMPLETE.md  KAGGLE_CLI_SETUP.md  KAGGLE_MIGRATION_SUMMARY.md  KAGGLE_NOTEBOOK_SETUP.md  KAGGLE_SETUP.md  KAGGLE_SPECS.md  KAGGLE_UPLOAD_COMPARISON.txt  KAGGLE_UPLOAD_QUICK_GUIDE.md  MODELSCOPE_TRAINING_SUCCESS.md  MULTILANG_INTEGRATION_COMPLETE.md  Makefile  OFFLINE_TRAINING_INFO.md  OLLAMA_INTEGRATION_GUIDE.md  PAPER_AUDIT.md  PAPER_AUDIT_FINAL.md  (+32 more)
configs/: gpu_profiles.yaml  modelscope_config.yaml  train_cpu.yaml  train_cpu_optimized.yaml  train_gpu.yaml  train_kaggle.yaml  train_mps.yaml  train_scaling.yaml  train_tpu.yaml  train_v2_gpu.yaml  train_v2_mnm_debug.yaml  train_v2_mnm_tuned.yaml
docs/: HANDOVER.md  M2_MPS_TRAINING_GUIDE.md  MODELSCOPE_500STEP_RESULTS.md  MODELSCOPE_TRAINING_INSTRUCTIONS.md  RTX3070_TRAINING_GUIDE.md  modelscope_training.md
logs/: train_metrics.csv
ollama_package/: Modelfile  README.md  graphmer_api.py  graphmer_model.gguf  install.sh
(+127 files in other folders)
